# toogoodtogo-04

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_SETUP.md  Dockerfile  MVP_SUMMARY.md  README.md  REMAINING_WORK.md  TEST_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  uxflow.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
deployment/: .env.production.template  .gitignore  docker-compose.prod.yml
deployment/fail2ban/: jail.local
deployment/monitoring/: docker-compose.monitoring.yml  grafana-datasources.yml  prometheus.yml
deployment/nginx/: nginx.conf  ssl.conf.template
deployment/redis/: redis.conf
deployment/scripts/: backup.sh  deploy.sh  health-check.sh  restore.sh  rollback.sh  setup-droplet.sh
deployment/systemd/: toogoodtogo-backup.service  toogoodtogo-backup.timer  toogoodtogo.service
docs/: RUNTIME_GUIDE.md  security-checklist.md
scripts/: backup_db.ps1  run_bot.ps1
scripts/alembic/: env.py
specs/001-telegram-marketplace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ux-flow-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-digitalocean-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/bot/: __init__.py  callback_map.py  command_map.py  run.py
src/config/: __init__.py  settings.py
src/handlers/: __init__.py
tests/: conftest.py
(+105 files in other folders)
